# squawk

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  LICENSE  README.md  package.json  tsconfig.json
app/: .env.example  .gitignore  App.tsx  app.json  metro.config.js  package.json
app/src/: polyfills.ts  theme.ts
app/src/assets/: squawk_splash.webm
app/src/components/: ActivityTicker.tsx  AppHeader.tsx  BottomTabBar.tsx  ChannelCover.tsx  FeatureCard.tsx  FrequencyDisplay.tsx  HandsetFrame.tsx  HostPanel.tsx  LiveDot.tsx  LoginModal.tsx  OddsCards.tsx  PTTButton.tsx  RoundCard.tsx  SettlementCard.tsx  Skeleton.tsx  SpeakerGrille.tsx  SplashScreen.tsx  Ticker.tsx
app/src/hooks/: useWallet.ts
app/src/lib/: connections.ts  demoContent.ts  haptics.ts  host.ts  hostKey.ts  program.ts  session.ts  squawk.ts  wallet.ts
app/src/lib/idl/: squawk.json
app/src/navigators/: AppNavigator.tsx
app/src/providers/: WalletProvider.tsx
app/src/screens/: ChannelScreen.tsx  CreateChannelScreen.tsx  DiscoverScreen.tsx  LeaderboardScreen.tsx  PlaceholderScreen.tsx  ProfileScreen.tsx
docs/: decisions.md  plan.md
programs/squawk/: Cargo.toml
programs/squawk/src/: errors.rs  lib.rs  state.rs
scripts/: fund-wallet.ts  host-demo.ts  mint-mock-usdc.ts  phase-oracle-lifecycle.ts  phase-per-lifecycle.ts  phase2-lifecycle.ts  phase3-simulate.ts  run-tests.js  seed-demo.ts
tests/: squawk.ts
