[package]
name = "squawk"
version = "0.1.0"
description = "Squawk — walkie-talkie micro prediction markets on MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squawk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.14.4", features = ["anchor-compat", "access-control"] }
magicblock-magic-program-api = { version = "0.10.1", default-features = false }
bincode = "^1.3"
